# RacingStats

./: README.md
lmu_racing_coach/: README.md
lmu_racing_coach/backend/: pyproject.toml
lmu_racing_coach/backend/app/: main.py
lmu_racing_coach/backend/app/api/routes/: config.py  telemetry.py  tracks.py
lmu_racing_coach/backend/app/core/: config.py
lmu_racing_coach/backend/app/domain/: models.py
lmu_racing_coach/backend/app/schemas/: telemetry.py
lmu_racing_coach/backend/app/services/: coaching_engine.py  lap_analyzer.py  live_telemetry.py  lmu_locator.py  native_bridge.py  telemetry_ingestor.py  track_store.py  windows_shared_memory.py
lmu_racing_coach/data/tracks/imola/: coach_rules.json  corners.json  map_svg.json  reference_line.json  track.json
lmu_racing_coach/docs/: ARCHITECTURE.md  LIVE_TELEMETRY_INTEGRATION.md  TRACK_PACKS.md
lmu_racing_coach/frontend/: index.html  package.json
lmu_racing_coach/frontend/src/: App.tsx  api.ts
lmu_racing_coach/native/lmu_bridge/: README.md  build_windows.ps1
lmu_racing_coach/native/lmu_bridge/include/: lmu_shared_memory_bridge.h
lmu_racing_coach/native/lmu_bridge/src/: lmu_shared_memory_bridge.c
