[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmu-racing-coach-backend"
version = "0.1.0"
description = "Local LMU racing coach backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "duckdb>=1.1.0",
  "orjson>=3.10.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"
